# homeassistant-waybar

./: .gitignore  LICENSE  README.md
examples/: exampleconf.toml  waybar.jsonc
src/: CMakeLists.txt  parser.c  parser.h  sensor.c  sensor.h  waybarHomeassistant.c  waybarHomeassistant.h
